[tool.poetry]
name = "test_personas"
version = "0.1.0"
description = ""
authors = ["Mohamed Arshath <marshath@gmail.com>"]
readme = "README.md"
include = ["test_personas"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
openai = "^1.54.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"